// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
Array [
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>,
  <div
    data-testid="test-dynamic-component"
  >
    Wrapped 
    TestDynamicComponent
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;

exports[`renders correctly without optional props 1`] = `
Array [
  <div
    data-testid="test-div"
  >
    Wrapped
     
    div
  </div>,
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>,
  <div
    data-testid="test-function"
  >
    Wrapped
     
    TestFunctionComponent
  </div>,
  <div
    data-testid="test-class"
  >
    Wrapped
     
    TestClassComponent
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;
